# daxiang-vpn

./: .gitattributes  .gitignore  AGENTS.md  README.md  go.mod  go.sum
android/dxandroid-status/: README.md
backend/dxhub/: README.md  go.mod
clients/admin-menubar/: DaxiangInnernetStatus.swift  README.md  ZonghengInnernetStatus.swift
clients/cli/: README.md  build-macos.sh  build.ps1  main.go
clients/desktop-gui/: README.md  build.ps1  package-lock.json  package.json
clients/python-sdk/: README.md
design/: .thumbnail  Hub 控制台.dc.html
docs/: README.md
docs/00-overview/: client-guide.md  mvp-plan.md
docs/10-architecture/: egress-strategy.md  system-architecture.md
docs/30-implementation/: android-client-routes.md  android-egress-agent.md  android-egress-performance-acceleration.md  android-egress-polish-plan.md  auth-api-mvp.md  cli-mvp-implementation.md  client-singleton-plan.md  desktop-gui-client-todo.md  desktop-gui.md  dxvpn-exe-implementation.md  hub-admin-panel.md  python-sdk.md  server-managed-client.md  zhvpn-exe-implementation.md
docs/40-security/: security-audit-2026-06-04.md  (+1 more)
hub/: README.md  main.go
scripts/: build-desktop-gui.ps1  check-android-egress-health.ps1  check-android-reverse-egress.sh  check-android-shell-baseline.ps1  measure-android-egress.ps1  measure-android-tail-latency.ps1  rotate-android-egress-ip.ps1  watch-android-egress-liveness.sh
sdk/python/: README.md  build.ps1  pyproject.toml  setup.py
sdk/python/src/zongheng_vpn/: client.py  models.py
sdk/python/tests/: test_client.py
tools/: ab-upload-test.sh
(+257 files in other folders)
