[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "zongheng-vpn"
version = "0.1.1"
description = "Python wrapper for the Zongheng VPN CLI control plane"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Zongheng VPN" }
]
dependencies = []

[project.optional-dependencies]
requests = ["requests>=2.31"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zongheng_vpn = ["bin/zhvpn.exe", "bin/zhvpn"]
